--- a/style.css
+++ b/style.css
@@ -82,3 +82,6 @@ body {
   from { opacity: 0; transform: translateY(20px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
+
+/*tento komentik je iba pre samuska */
