--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
+  margin: 0;
+  position: relative;
 }
 
 /* Header style */
@@ -45,13 +48,14 @@ body {
 
 /* Game section */
 #games {
-  margin-top: 200px;
-  padding: 50px 20px;
+  margin-top: 100px; /* You already had this */
+  padding: 120px 20px 50px; /* 👈 this adds space from top */
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 30px; /* 👈 space between each question block */
 }
+
 
 /* Buttons / Game links */
 .game-link {
@@ -113,3 +117,30 @@ a{
 }
 
 /*tento komentik je iba pre samuska */
+.scoreboard {
+  position: fixed;
+  bottom: 0;
+  width: 200px;
+  padding: 10px;
+  color: white;
+  background: #333;
+  text-align: center;
+  font-size: 1.2rem;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+  
+.button-wrapper {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+}
+
