--- a/style_otazky.css
+++ b/style_otazky.css
@@ -16,17 +16,20 @@ body {
   border: 8px solid #c9c851;
   border-radius: 12px;
   outline: 6px solid #4535b1;
+  display: flex;
+  flex-direction: row;
 }
 
-.row {
+.column {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   margin: 15px 0;
 }
 
 .flip-card {
   perspective: 1500px;
-  margin: 0 15px;
+  margin: 10px;
 }
 
 .flip-inner {
@@ -71,7 +74,7 @@ body {
   z-index: 1;
 }
 .XX {
-  margin-top: 100px;
+  margin-top: 50px;
   font-size: 32px;
   color: red;
   background-color: #441c1c;
@@ -139,4 +142,14 @@ a {
 
 .hidden {
   display: none;
+}
+
+#xtext {
+  color: red;
+  font-size: 30px;
+  visibility: visible;
+}
+
+h3 {
+  margin: 0px;
 }
